--- a/app/src/main/res/layout/item_phone_text.xml
+++ b/app/src/main/res/layout/item_phone_text.xml
@@ -7,7 +7,7 @@
     <TextView
         android:id="@+id/phone_number_text"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="10dp"
         android:textSize="14sp" />
 </LinearLayout>
